# rags-agent

./: README.md  Untitled.ipynb  helper.py  llms.ipynb  ollama.ipynb  pyproject.toml  rags.py  tests.ipynb  utils.py
.ipynb_checkpoints/: tests-checkpoint.ipynb
