[tool.poetry]
name = "rags-agent"
version = "0.1.0"
description = ""
authors = ["Bettenoch <bettenoch254@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
llama-index = "^0.10.46"
nest-asyncio = "^1.6.0"
notebook = "^7.2.1"
attrs = "^23.2.0"
openai = "^1.34.0"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
